# ChangeLog for kde-base/solid-runtime
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/solid-runtime/ChangeLog,v 1.166 2014/04/01 18:09:16 johu Exp $

*solid-runtime-4.12.4 (01 Apr 2014)

  01 Apr 2014; Johannes Huber <johu@gentoo.org> +solid-runtime-4.12.4.ebuild:
  Version bump KDE SC 4.12.4

  11 Mar 2014; Johannes Huber <johu@gentoo.org> -solid-runtime-4.12.2.ebuild:
  Remove KDE SC 4.12.2

*solid-runtime-4.12.3 (04 Mar 2014)

  04 Mar 2014; Johannes Huber <johu@gentoo.org> +solid-runtime-4.12.3.ebuild:
  Version bump KDE SC 4.12.3

  23 Feb 2014; Agostino Sarubbo <ago@gentoo.org> -solid-runtime-4.11.2.ebuild:
  Remove old

  23 Feb 2014; Agostino Sarubbo <ago@gentoo.org> solid-runtime-4.11.5.ebuild:
  Stable for ppc64, wrt bug #493782

  20 Feb 2014; Agostino Sarubbo <ago@gentoo.org> solid-runtime-4.11.5.ebuild:
  Stable for ppc, wrt bug #493782

  16 Feb 2014; Agostino Sarubbo <ago@gentoo.org> solid-runtime-4.11.5.ebuild:
  Stable for x86, wrt bug #493782

  14 Feb 2014; Johannes Huber <johu@gentoo.org> -solid-runtime-4.12.1.ebuild:
  Remove KDE SC 4.12.1

  09 Feb 2014; Agostino Sarubbo <ago@gentoo.org> solid-runtime-4.11.5.ebuild:
  Stable for amd64, wrt bug #493782

*solid-runtime-4.12.2 (06 Feb 2014)

  06 Feb 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  +solid-runtime-4.12.2.ebuild:
  Version bump KDE SC 4.12.2

  20 Jan 2014; Michael Palimaka <kensington@gentoo.org>
  -solid-runtime-4.12.0.ebuild:
  Remove KDE SC 4.12.0

  20 Jan 2014; Michael Palimaka <kensington@gentoo.org>
  solid-runtime-4.11.5.ebuild:
  Restore keywords that were accidentally omitted.

*solid-runtime-4.12.1 (18 Jan 2014)

  18 Jan 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  +solid-runtime-4.12.1.ebuild:
  Version bump KDE SC 4.12.1

  10 Jan 2014; Chris Reffett <creffett@gentoo.org> -solid-runtime-4.11.4.ebuild:
  Remove KDE SC 4.11.4

*solid-runtime-4.11.5 (10 Jan 2014)
