@@ -4,25 +4,25 @@ Hash: SHA256
 DIST kde-runtime-4.11.5.tar.xz 7870568 SHA256 7fa0597e8dae8aff7ce06874ffd1894aded6b4c40c5c43263af31f4db2b856e3 SHA512 6284db9fd2e99378e70917d488dcb94174e3e5b3002ec585e8913741e99fac8ae856d76305ebd886116f0378f34989e91e504cbfde6c4bdb601489bbd25d836e WHIRLPOOL a007b1763ae67cb1f7c31a4f22f3896dd4a5f36c0e00f87d52ad005ceb38a5408b355f99e1dfaf755d3c4a9477b5542f82f24d4883602c29c63165783376e75f
 DIST kde-runtime-4.12.3.tar.xz 7855972 SHA256 515b1926c8c379ab625028c716b70af14eef0aa9c68cc747307e7568107b461a SHA512 f78ae661b68875ceb6de328bfdf941f8d8d3b495ab88592f8d6d7bb9cda004509f5ceb7a41b986599df0fcc70cc554d05d61a756458bfae94357a808febc716f WHIRLPOOL 8a052da765a90ffd246760ca1335679026757d302b75136b8775ada4fd767f2d1ac93a75551ce0f5aad3b8c59d4e5a1bc37f3db6bc06293b7f26e18494fba911
 DIST kde-runtime-4.12.4.tar.xz 7856040 SHA256 1d8541bbedc8c1ab13b6d04ce04ab5439d480e5b797a1ddf1ac079a92965c516 SHA512 f103edf0eb2403f5d0ab179c32b89af3c7501d85adab81bbf24bd9c4c13b925a8e9527f036c4053811ddeb2a659bd2ae7160a58330b4766689581c3eef1de58c WHIRLPOOL e9c24571797adade65fee8558bf689ee554508878115093f216a01a33673e8c65867330acc012f34eb64c69723198f815f496f78cf3f0202a9b1d9ec4108c5c8
-EBUILD solid-runtime-4.11.5.ebuild 770 SHA256 fa6a43afd4938766dc44873b2616e90286f9346d4e69ca49a995611f0d8d337c SHA512 123fdeb96cd18186bb4aaeb24a70759f0feda7f69e4d74eb3896e191fbe333b6283b6ab70059961c3f59331fd1154ab8061729ea9258cd40e5d16e0bea7d246b WHIRLPOOL 2e844967edd0ada37676f90c96e64315f50dbd459d559881b371662890d26df8e8ac447ebf0e857e68bd8bb416d45564e585a451b7324e187ae67f039e782d17
-EBUILD solid-runtime-4.12.3.ebuild 776 SHA256 3eff1b566f3de67f204380980082a4fa71559289c467aae6c9ae8f45445db4b3 SHA512 5e5271924ef6efde2e719a6a67cf5d32be98e3388f04d21afec71d497d6829d3b4f2af92450cfb30bbf2f898126038c208d5b13e7c2d92420e142e43c787b9f8 WHIRLPOOL 207c650cf1da6fd9bef9aee001e51d098d33135079291f37ab6539d101932426163e0e6ef3c58a60702e2ea377f66277904059e4a59587afb0f09e8ac80ab640
-EBUILD solid-runtime-4.12.4.ebuild 776 SHA256 937ed186e1d032382196c464e0c08264c845f265c15576595674abddf2cc2ba7 SHA512 281169350acdea50ab9a136412bc272dd66528d50ff904a6e7c5055d47f13378fb8ee5a7de33e936d80c041de4e4501cbfba63ff90a35f03605cca96d1a93b7f WHIRLPOOL 887f40dc99082111a16548697e7e1a29d4548f9af1c8133739b525ffaed1dc7bf48d8567243288b1524679b047b072ddabf13e0b3cd1b5f37d4ba3c5d5ce5a44
-MISC ChangeLog 20673 SHA256 0fb6865a4ed757b81f0c2d20fc1a1ccdaf905bb2cefa0bbc4185040f8c167e00 SHA512 7e5a05ce6768f573f6bc9bd02cb4dc702f967531775bf20889d85ed49494c17d4dfdde5602928842e3ee7bcd65fe3a61422d71cd3ea0f0f0ac5c5dd12b366e72 WHIRLPOOL 5e6158ca8bc6522e88739d0d4ca366db605d36ce007ed80d3e135400e84b318768640744ba91a11232f212f9ec5f5ca0b6229a0e28a38f93758651314734b791
+EBUILD solid-runtime-4.11.5.ebuild 737 SHA256 3068abfd3aa632ddbbe4504dd64f18215f729dbe6e9707072ba0abc93c620361 SHA512 eb651a9accb7570367921ea3ccf9b7641446de29767f34d31a481fbbfb4299e34b988b796dfca85b3858089c46be2355367446c3cde4e429e8fecf4df27e7893 WHIRLPOOL 77e88819bf2ad515d6cb605445ebf8af7d943e46039489bc18c1cfbaf21bceea55247b726e5c196dd5b61a2395d14836737a90e0ddc92e7fd06655c8b531d2c8
+EBUILD solid-runtime-4.12.3.ebuild 742 SHA256 a9128d3821889f63559c291153cdecd8050c0db7560b009155310e784b04e709 SHA512 5d08d81237851af45d7cff2fe66d1e00302013d9a96d68fcbf6b75040a5df1385441a1d6962cf941f07deda08046ea91bfa71fb53af0e2e74c899bb9faae8f10 WHIRLPOOL 753ca56ed279b47b9e3208fdb50b8be2953e656c594133192c643c01814b986ccf55d8e495dc76ada4d34ae276ef81e2c45d8b4004c6d77e5b4840ca0402e74a
+EBUILD solid-runtime-4.12.4.ebuild 742 SHA256 1e614cf96258342f4d7b46bdee64ec1770167e756e838644b0172f0d5ac27413 SHA512 62ed2c2f7486b1995f39f4e082d91e351119e489d728b6395986b7b34dfcf9b695851a0acc30653f5f1415153b736993e115d4cf006c4193eca3addf583ecbdf WHIRLPOOL 3e1397d0a33c5f31ccb4c3cd287efad5af270888bf3808c8d73cb30895f83d19d629a6f7efa10f2cce122cb97f1b210d70cc72b60e8f0e29310c65dba0182c79
+MISC ChangeLog 20861 SHA256 e774ca8345f22983faebda89f334c9f9699378606b6269a6c817bd9e4c60fb2e SHA512 e0ae4c3b1c731b869f47e9b78dbd0fa7e93406a69a69c587fc052a68d35900691d5ef8edea06a9449d3fb20f9963bc773b54b4d6e897dfaab5a81490dc9a2694 WHIRLPOOL 600ae8e246c662f5196ea5bb036193d9ce764ebf46fde939c72d3c74d7a6f686940c0d6135308b91dacd86c85154548f9b64463a2730e91d946edb5998a8891c
 MISC metadata.xml 156 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a SHA512 0dcd7cfb246c4518ed1653cb06f5d2c7220ea90160a4b1a1da43edf5124b76d7104fe35a545178b6b3df19f5f3a3eb3f31ac1b4d169e3ca90d78be3e20e58b05 WHIRLPOOL df162e3d521df7decdd84d980e4bc71531bb8e05486c07102c554b529c10a1fb3374dda79d56b13bc037a2d230b4b8ff25702c7a1b86d703a24e8bfe7fe57642
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTOwEwAAoJEGVpnaTzz9K9kfIQAI4Ek9SgAAYMqAjmEB80BSuO
-xyQsIUXoEoKmAqPXfEV5Mh287FUxd32sLtGFeVNn/v1R2i0wHZbNJRci+e8DxQ7D
-mc3Sd0113Hrh00/d6/1WsD86ENywJn/Lp+sUII4F/4LYVyhsMlF2dtQbk5mi7EFg
-Hd4nXukILckuHYL/ENFJ7747i0L8ARgVgEjwPQx9HnkIFr6B/5lEE5A5rVS+oq8l
-XFFrf1uBIvNdw5+75ALvOVBquyQCIF8xfQr+eDBAmaiVuGoyqZLRsJva6EOvFcOt
-4iJuQzvEAadG7IsR7nqZ1u920EMkEQT5WpMS8DrZH8jICfOfcdj9rJ9KUN9x1iwi
-5a//PRKmVnxs99stIXS/lLGXBHSEP6qrzbEyHwNkK80nTWNSXfxx0Pdg43IhzOM1
-IU8ZFbWWIDLb4vZsi5D9LYeM8OQcX5nEboN3Pnf6sQB11qBYGGjE3gy0VXdvI77L
-/KZO+UsS4wp7NQ3nH8PZfW+AeX8uxMVXN0UZicElFL70hPzssV2b+UklvaLvILg1
-ff1SzGam+tWWAZKnfJIcN8c+crhrKHk5xA1Chj2y9M2CLBWUvVeQIbGMAP+omc68
-lDPLgHMpEKy5uIS4IzmkE9z5JW71XYIb02lITndXcXMYaiMKLAvTGMw/tDJyWx39
-M/43cr0R+ohlxjcYFWj1
-=z3sC
+iQIcBAEBCAAGBQJTS9dJAAoJEGVpnaTzz9K9JKsQAJvvy73OUjmyg03QqNhbB8sZ
+wHlCcqrSXDhZGx0/j/yOQw6SCIJlmNV1boMhHWjJquKmIXM5WURma7mgY8aaJiMB
+C5U5XdnBhcZvPCq6cR8cPNKg+P/J3qYoUVgSlmDw29OH5QknAgP72KKdJsuwArwQ
+fbW+hv+CojJ+kNJ0RMLuT5kX7Wpqxfqa3CRdlEpqpsw+bd4FuYtmcHiJyDjBdOBl
+E6BmRmcMnB75PYSP77uFb7rwEnTkPoPkf7ljdmgZKl26tqOlMYuYC5OmlYVBFdCu
+r5+d/WpyDjVHiC5FWHiXUiXkYlZwGBraZllDuGITvDNnapbLgvYWXaTkmXO3KCgl
+Q7erU+17NpbAMrhGPW9RYlkMtGnCc8oFi/YHruIvtNmwEY1gLa35mnAgw5+zH/h9
+u+iIIK9Hhp+Wl+buoqLhzFzFcmkVH1fAUR2gKxDpUTKrAjuWWYqNyvp2h8JhiV0U
+gI7+4ZZMmow2u6xSH0u2RONaJ/Ik7Xr7OTg6efEOa2dcBjD3buJJa7WbqPRrkDyu
+OZqWpSE4kMiy0q8wQHawtE1J616dyOzrDNtgc/2l8/pK5Kmw2OLyDtOLBcMY2lnv
+QG3OHm0YFRrRvq20Y0YKxlvJ4dVt7ya+fx49T4vXco5/2dlWdk9+7LYVjfu6QW83
+kCNLO6DACXbpLLS/wdC5
+=+krQ
 -----END PGP SIGNATURE-----
