@@ -6,8 +6,8 @@ HOMEPAGE=http://solid.kde.org
 IUSE=debug bluetooth networkmanager aqua
 KEYWORDS=~amd64 ~arm ~ppc ~ppc64 ~x86 ~x86-fbsd ~amd64-linux ~x86-linux
 LICENSE=GPL-2
-RDEPEND=bluetooth? ( net-wireless/bluedevil ) networkmanager? ( || ( kde-misc/networkmanagement kde-misc/plasma-nm ) ) >=kde-base/oxygen-icons-4.12.3:4[aqua=] dev-lang/perl >=dev-qt/qt3support-4.8.5:4[accessibility] >=dev-qt/qtcore-4.8.5:4[qt3support,ssl] >=dev-qt/qtdbus-4.8.5:4 >=dev-qt/designer-4.8.5:4[-phonon] >=dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] >=dev-qt/qtscript-4.8.5:4 >=dev-qt/qtsql-4.8.5:4[qt3support] >=dev-qt/qtsvg-4.8.5:4 >=dev-qt/qttest-4.8.5:4 >=dev-qt/qtwebkit-4.8.5:4 >=kde-base/kdelibs-4.12.3:4[aqua=]
+RDEPEND=bluetooth? ( net-wireless/bluedevil ) networkmanager? ( kde-misc/plasma-nm ) >=kde-base/oxygen-icons-4.12.3:4[aqua=] dev-lang/perl >=dev-qt/qt3support-4.8.5:4[accessibility] >=dev-qt/qtcore-4.8.5:4[qt3support,ssl] >=dev-qt/qtdbus-4.8.5:4 >=dev-qt/designer-4.8.5:4[-phonon] >=dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] >=dev-qt/qtscript-4.8.5:4 >=dev-qt/qtsql-4.8.5:4[qt3support] >=dev-qt/qtsvg-4.8.5:4 >=dev-qt/qttest-4.8.5:4 >=dev-qt/qtwebkit-4.8.5:4 >=kde-base/kdelibs-4.12.3:4[aqua=]
 SLOT=4/4.12
 SRC_URI=mirror://kde/stable/4.12.3/src/kde-runtime-4.12.3.tar.xz
 _eclasses_=cmake-utils	7798d4361fbdd043014e635a1753e076	eutils	af81d52c25ec93fbdff71e0efb0de7b7	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	gnome2-utils	f658eba3cc594a21cf6eef4af47daa90	kde4-base	7bb17d423f1c69e530a27ac752260711	kde4-functions	7fc09e82c0d1735f44aedfa8e5073065	kde4-meta	28d3b06d485ec5f44e571b20e62d4aa7	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=7727f8978b62b2aa57fc5b3a67ec7d0a
+_md5_=ec6ca1b8d8af351fdfe0b7958bb82955
