@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/solid-runtime
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/solid-runtime/ChangeLog,v 1.166 2014/04/01 18:09:16 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/solid-runtime/ChangeLog,v 1.167 2014/04/14 12:40:40 johu Exp $
+
+  14 Apr 2014; Johannes Huber <johu@gentoo.org> solid-runtime-4.11.5.ebuild,
+  solid-runtime-4.12.3.ebuild, solid-runtime-4.12.4.ebuild:
+  Remove kde-misc/networkmanagement from RDEPEND.
 
 *solid-runtime-4.12.4 (01 Apr 2014)
 
